namespace FishNetLearnProject
{
    public static class Constants
    {
        #region Tags
        public const string PlayerTag = "Player";
        #endregion

        #region Controls
        public const string Vertical = "Vertical";
        public const string Horizontal = "Horizontal";
        public const string LookHorizontal = "Mouse Y";
        public const string LookVertical = "Mouse X";
        #endregion

        #region AnimationsParams
        public const string CharacterIsWalking = "isWalking";
        public const string CharacterIsRunning = "isRunning";
        public const string CharacterWaitTrigger = "Wait";
        #endregion
    }
}